// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Legacy / Story with storiesOf() with some emoji 1`] = `
<storybook-wrapper>
  <storybook-button-component
    _nghost-a-c1=""
    ng-reflect-text="😀 😎 👍 💯"
  >
    <button
      _ngcontent-a-c1=""
    >
      😀 😎 👍 💯
    </button>
  </storybook-button-component><storybook-button-component
    _nghost-a-c1=""
    ng-reflect-text="😀 😎 👍 💯"
  >
    <button
      _ngcontent-a-c1=""
    >
      😀 😎 👍 💯
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;

exports[`Storyshots Legacy / Story with storiesOf() with text 1`] = `
<storybook-wrapper>
  <storybook-button-component
    _nghost-a-c0=""
    ng-reflect-text="Hello Button"
  >
    <button
      _ngcontent-a-c0=""
    >
      Hello Button
    </button>
  </storybook-button-component>
</storybook-wrapper>
`;
